--- a/cobot-soft-glue-dispencing-v2/GlueDispensingApplication/storage/settings/camera_settings.json
+++ b/cobot-soft-glue-dispencing-v2/GlueDispensingApplication/storage/settings/camera_settings.json
@@ -8,7 +8,7 @@
     "Min contour area": 1000,
     "Max contour area": 100000,
     "Contour detection": true,
-    "Draw contours": false,
+    "Draw contours": true,
     "Preprocessing": {
         "Gaussian blur": true,
         "Blur kernel size": 5,
