added state machine framework and adapter

--- a/cobot-soft-glue-dispencing-v2/GlueDispensingApplication/storage/glueCells/glue_cell_config.json
+++ b/cobot-soft-glue-dispencing-v2/GlueDispensingApplication/storage/glueCells/glue_cell_config.json
@@ -3,7 +3,7 @@
   "CELL_CONFIG": [
     {
       "id": 1,
-      "type": "TypeD",
+      "type": "TypeC",
       "url": "http://192.168.222.143/weight1",
       "capacity": 5000
     },
